force-app/main/default/objects/ErrorLog__c/fields/DMLNumberOfFailedRows__c.field-meta.xml
<CustomField>
    <fullName>DMLNumberOfFailedRows__c</fullName>
    <label>Number Of Failed Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>