force-app/main/default/objects/ErrorLog__c/fields/DMLStatusCode__c.field-meta.xml
<CustomField>
    <fullName>DMLStatusCode__c</fullName>
    <label>Status Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>