force-app/main/default/objects/ErrorLog__c/fields/Errororigin__c.field-meta.xml
<CustomField>
    <fullName>Errororigin__c</fullName>
    <label>Error origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>