force-app/main/default/objects/ErrorLog__c/fields/GovtLimitExecutingCode__c.field-meta.xml
<CustomField>
    <fullName>GovtLimitExecutingCode__c</fullName>
    <label>Govt Limit Executing Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>