force-app/main/default/objects/ErrorLog__c/fields/RelatedToId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToId__c</fullName>
    <label>Related To ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>