force-app/main/default/objects/ErrorLog__c/listViews/Custom_Date.listView-meta.xml
<ListView>
    <fullName>Custom_Date</fullName>
    <columns>NAME</columns>
    <columns>Errororigin__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>ClassName__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/29/2024 12:00 AM</value>
    </filters>
    <label>Custom Date</label>
</ListView>