force-app/main/default/objects/ErrorLog__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>MethodName__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ExceptionType__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>